<resources>
    <string name="app_name">Pure</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings_name">Изменить имя</string>

    <string name="menu_chats">Чаты</string>
    <string name="menu_vol">Волонтеры</string>
    <string name="menu_name">Изменить имя</string>
    <string name="menu_code">Введите код</string>
    <string name="menu_home">PureHeart</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_help">Помощь</string>
    <string name="profile_name">User</string>
    <string name="profile_status">В сети</string>
    <string name="profile_ac">Данные</string>
    <string name="profile_numbers">+79111111111</string>
    <string name="profile_label_phone">Ваш номер телефона</string>
    <string name="profile_user_login">User Login</string>
    <string name="profile_name_text">Имя пользователя</string>
    <string name="profile_bio">О себе</string>
    <string name="action_settings_edit">Выход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_register_img">register_img</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="code_sms">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="code">Code</string>
    <string name="Nomer">Введите идентификационный номер</string>
    <string name="Индентификация">Индентификационный код волонтера</string>
    <string name="Волонтер">Status</string>
    
    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников </item>

    </plurals>
</resources>