<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:contentDescription="@string/cd_register_img"

        android:rotationX="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconfinder_document05_1622831_121951" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_img"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register_text"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/code_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/register_input_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:maxLines="6"
        android:padding="@dimen/appPadding"
        android:textColor="@color/black"
        android:textSize="@dimen/largeText"
        android:gravity="center"
        android:hint="@string/register_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text" />

</androidx.constraintlayout.widget.ConstraintLayout>


